# IR-Project

./: Dockerfile  README.md  docker_init.sh  docker_run.sh  docker_run.sh.save
log/: latest_list
src/pkg/: config_master.rviz
src/pkg/costmap_plugin/: CMakeLists.txt  gradient_layer.xml  package.xml
src/pkg/costmap_plugin/include/: gradient_layer.hpp
src/pkg/costmap_plugin/src/: gradient_layer.cpp
src/pkg/nav2_astar_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/pkg/nav2_astar_planner/include/: a_star_planner.hpp
src/pkg/nav2_astar_planner/src/: a_star.cpp  a_star_planner.cpp
src/pkg/nav2_straightline_planner/: CMakeLists.txt  package.xml
src/pkg/nav2_straightline_planner/include/: straight_line_planner.hpp
src/pkg/nav2_straightline_planner/src/: straight_line_planner.cpp
src/pkg/rover_bringup/: CMakeLists.txt  package.xml
src/pkg/rover_bringup/config/: config_master.rviz  localization_ekf.yaml  localization_ekf_master.yaml  localization_ekf_slave.yaml  slam_sim_params_online.yaml  slam_sim_params_online_slave.yaml  waypoints.yaml
src/pkg/rover_bringup/launch/: navigation_sim.launch.py  rover_sim.launch  rviz.launch.py  sim_robot_localizer.launch.py  slam_sim.launch.py
src/pkg/rover_bringup/params/: nav2_sim_params.yaml  nav2_sim_params_master.yaml  nav2_sim_params_slave.yaml
src/pkg/rover_bringup/scripts/: follow_waypoints.py  simple_follower.py
src/pkg/rover_description_pkg/: CMakeLists.txt  package.xml
src/pkg/rover_description_pkg/meshes/: rplidar_s2.dae
src/pkg/rover_description_pkg/urdf/: imu.urdf  rover.xacro  rover_gazebo.xacro  rover_macro.xacro  rover_slave.xacro  utilities.xacro
src/pkg/rover_gazebo/: CMakeLists.txt  package.xml
src/pkg/rover_gazebo/launch/: multi_rover.launch.py  rover_gazebo.launch.py
src/pkg/rover_gazebo/worlds/: maze.sdf
