<?xml version="1.0"?>
<package format="3">
  <name>costmap_plugin</name>
  <version>0.0.1</version>
  <description>Un semplice planner che genera percorsi in linea retta per Nav2.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>



  <export>
    <costmap_2d plugin="${prefix}/gradient_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
