<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.0</version>
  <description>The rover_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="drone@todo.todo">drone</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>nav2_amcl</build_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>odometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nav2_map_server</build_depend>
  <build_depend>teb_local_planner</build_depend>

  <depend>realsense2_camera_msgs</depend>
  <depend>librealsense2</depend>
  <depend>diagnostic_updater</depend>
  <depend>rtabmap_ros</depend>
  

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>odometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>
  <exec_depend>nav2_constrained_smoother</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_graceful_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_rotation_shim_controller</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_theta_star_planner</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_voxel_grid</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend> 
  <exec_depend>nav2_map_server</exec_depend>

  <exec_depend>rtabmap_conversions</exec_depend>
  <exec_depend>rtabmap_demos</exec_depend>
  <exec_depend>rtabmap_examples</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_python</exec_depend>
  <exec_depend>rtabmap_rviz_plugins</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

